# telly

./: .clangd  CMakeLists.txt  build.sh  build_run.sh
src/: main.cpp
